--- a/FileIndexer/FileIndexer.csproj
+++ b/FileIndexer/FileIndexer.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
+    <Compile Include="Volumes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
