--- a/FileIndexer/FileIndexer.csproj
+++ b/FileIndexer/FileIndexer.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CommandParser.cs" />
     <Compile Include="ExitCommand.cs" />
     <Compile Include="FileGenerator.cs" />
+    <Compile Include="FixedParameters.cs" />
     <Compile Include="GeneratorMethod.cs" />
     <Compile Include="IIndexCache.cs" />
     <Compile Include="IndexBuilder.cs" />
