--- a/FileIndexer/FileIndexer.csproj
+++ b/FileIndexer/FileIndexer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Line.cs" />
     <Compile Include="LineIndex.cs" />
     <Compile Include="LineIndexJsonFileCache.cs" />
+    <Compile Include="LineNotFoundException.cs" />
     <Compile Include="PrintLineWords.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="IIndexer.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="Volumes.cs" />
+    <Compile Include="WordNotFoundException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
