--- a/FileIndexer.Console/FileIndexer.Console.csproj
+++ b/FileIndexer.Console/FileIndexer.Console.csproj
@@ -4,15 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E7DF62A-8DEC-4ADE-A584-0DFE8FB94FCA}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{58BA4AC0-4364-4967-A202-9D7DBF629D01}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FileIndexer</RootNamespace>
-    <AssemblyName>FileIndexer</AssemblyName>
+    <RootNamespace>FileIndexer.Console</RootNamespace>
+    <AssemblyName>FileIndexer.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,13 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.5.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,28 +41,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Generator\FileGenerator.cs" />
-    <Compile Include="FixedParameters.cs" />
-    <Compile Include="Generator\GeneratorMethod.cs" />
-    <Compile Include="Index\IIndexCache.cs" />
-    <Compile Include="Index\IndexBuilder.cs" />
-    <Compile Include="FileSource.cs" />
-    <Compile Include="Index\Line.cs" />
-    <Compile Include="Index\LineIndex.cs" />
-    <Compile Include="Index\LineIndexJsonFileCache.cs" />
-    <Compile Include="Index\LineNotFoundException.cs" />
-    <Compile Include="IStringsSource.cs" />
+    <Compile Include="CommandParser.cs" />
+    <Compile Include="ExitCommand.cs" />
+    <Compile Include="ICommand.cs" />
+    <Compile Include="Parameters.cs" />
+    <Compile Include="PrintLineWords.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Index\Range.cs" />
-    <Compile Include="Volumes.cs" />
-    <Compile Include="WordNotFoundException.cs" />
+    <Compile Include="WrongCommandOrParametersException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FileIndexer\FileIndexer.csproj">
+      <Project>{0E7DF62A-8DEC-4ADE-A584-0DFE8FB94FCA}</Project>
+      <Name>FileIndexer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
