Complete FileIndex service and service host

--- a/FileIndexer.Server/FileIndexer.Server.csproj
+++ b/FileIndexer.Server/FileIndexer.Server.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,14 +44,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IndexService.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="IIndexHolder.cs" />
+    <Compile Include="IndexHolder.cs" />
+    <Compile Include="IndexIsNotAvailableException.cs" />
+    <Compile Include="IndexService.cs" />
+    <Compile Include="Parameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FileIndexer\FileIndexer.csproj">
+      <Project>{0E7DF62A-8DEC-4ADE-A584-0DFE8FB94FCA}</Project>
+      <Name>FileIndexer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
